# moss-transcribe.cpp

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: BENCHMARK.md  make_plots.py
benchmarks/demo/: spec.json  transcribe_race.py
docs/: conversion.md
docs/superpowers/plans/: 2026-07-09-moss-transcribe-cpp-phase1-foundation-audio-frontend.md  2026-07-09-moss-transcribe-cpp-phase2-decode-e2e.md
docs/superpowers/specs/: 2026-07-09-moss-transcribe-cpp-port-design.md
scripts/: bench_upstream.py  convert_moss_transcribe_to_gguf.py  gen_baseline.py  gpu_verify.sh  requirements.txt
src/: backend.cpp  cli.cpp  common.cpp  config.hpp  generate.cpp  generate.hpp  model_loader.cpp  subtitle.cpp  tokenizer.cpp  tokenizer.hpp  transcribe.cpp  transcribe.hpp
tests/: CMakeLists.txt  capi_smoke.c  parity.hpp  test_audio_adaptor.cpp  test_audio_io.cpp  test_audio_path_e2e.cpp  test_audio_span.cpp  test_embed_lookup.cpp  test_fusion.cpp  test_generate_e2e.cpp  test_mel.cpp  test_qwen3_decoder.cpp  test_subtitle_export.cpp  test_subtitle_postprocess.cpp  test_tokenizer.cpp  test_transcript_parser.cpp  test_whisper_encoder.cpp
tests/python/: check_convert.py
